stop spark at end

--- a/py_files/sparkml.ipynb
+++ b/py_files/sparkml.ipynb
@@ -517,6 +517,22 @@
    "source": [
     "best_model.save(\"alsrecommend.model\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
