--- a/py_files/sparkml.ipynb
+++ b/py_files/sparkml.ipynb
@@ -14,7 +14,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import os\n",
+    "import shutil\n",
     "\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
@@ -32,7 +33,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/04/16 12:45:26 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/04/16 14:42:16 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -243,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/04/16 12:45:32 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n"
+      "23/04/16 14:42:21 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n"
      ]
     }
    ],
@@ -318,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "1.8919501331030912"
+       "1.8919501331030917"
       ]
      },
      "execution_count": 15,
@@ -338,9 +339,9 @@
    "outputs": [],
    "source": [
     "param_grid = ParamGridBuilder() \\\n",
-    "            .addGrid(als.maxIter, [20, 30]) \\\n",
-    "            .addGrid(als.rank, [15, 50]) \\\n",
-    "            .addGrid(als.regParam, [0.1, 1.0]) \\\n",
+    "            .addGrid(als.maxIter, [5,10]) \\\n",
+    "            .addGrid(als.rank, [3,5,10]) \\\n",
+    "            .addGrid(als.regParam, [0.1, 0.5]) \\\n",
     "            .build()"
    ]
   },
@@ -353,7 +354,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num. Models: 8\n"
+      "Num. Models: 12\n"
      ]
     }
    ],
@@ -384,7 +385,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/04/16 12:45:36 WARN BlockManager: Block rdd_290_0 already exists on this machine; not re-adding it\n",
       "                                                                                \r"
      ]
     }
@@ -421,16 +421,16 @@
       "text/html": [
        "<table border='1'>\n",
        "<tr><th>userId</th><th>bookId</th><th>rating</th><th>prediction</th></tr>\n",
-       "<tr><td>1395</td><td>6654</td><td>10</td><td>6.7425523</td></tr>\n",
-       "<tr><td>2563</td><td>463</td><td>7</td><td>7.294706</td></tr>\n",
-       "<tr><td>2563</td><td>3749</td><td>8</td><td>6.388261</td></tr>\n",
-       "<tr><td>1884</td><td>8389</td><td>10</td><td>8.336368</td></tr>\n",
-       "<tr><td>5140</td><td>7982</td><td>6</td><td>6.738714</td></tr>\n",
-       "<tr><td>847</td><td>4519</td><td>7</td><td>8.99555</td></tr>\n",
-       "<tr><td>5055</td><td>2366</td><td>8</td><td>6.9179006</td></tr>\n",
-       "<tr><td>2463</td><td>2366</td><td>10</td><td>8.4496565</td></tr>\n",
-       "<tr><td>4443</td><td>5300</td><td>7</td><td>6.172317</td></tr>\n",
-       "<tr><td>4230</td><td>8638</td><td>10</td><td>9.417885</td></tr>\n",
+       "<tr><td>1395</td><td>6654</td><td>10</td><td>5.2757545</td></tr>\n",
+       "<tr><td>2563</td><td>463</td><td>7</td><td>6.8804245</td></tr>\n",
+       "<tr><td>2563</td><td>3749</td><td>8</td><td>6.3984694</td></tr>\n",
+       "<tr><td>1884</td><td>8389</td><td>10</td><td>7.8649216</td></tr>\n",
+       "<tr><td>5140</td><td>7982</td><td>6</td><td>6.5331054</td></tr>\n",
+       "<tr><td>847</td><td>4519</td><td>7</td><td>8.411961</td></tr>\n",
+       "<tr><td>5055</td><td>2366</td><td>8</td><td>6.6758804</td></tr>\n",
+       "<tr><td>2463</td><td>2366</td><td>10</td><td>8.322912</td></tr>\n",
+       "<tr><td>4443</td><td>5300</td><td>7</td><td>6.313528</td></tr>\n",
+       "<tr><td>4230</td><td>8638</td><td>10</td><td>7.664136</td></tr>\n",
        "</table>\n",
        "only showing top 10 rows\n"
       ],
@@ -438,16 +438,16 @@
        "+------+------+------+----------+\n",
        "|userId|bookId|rating|prediction|\n",
        "+------+------+------+----------+\n",
-       "|  1395|  6654|    10| 6.7425523|\n",
-       "|  2563|   463|     7|  7.294706|\n",
-       "|  2563|  3749|     8|  6.388261|\n",
-       "|  1884|  8389|    10|  8.336368|\n",
-       "|  5140|  7982|     6|  6.738714|\n",
-       "|   847|  4519|     7|   8.99555|\n",
-       "|  5055|  2366|     8| 6.9179006|\n",
-       "|  2463|  2366|    10| 8.4496565|\n",
-       "|  4443|  5300|     7|  6.172317|\n",
-       "|  4230|  8638|    10|  9.417885|\n",
+       "|   148|  3473|    10|  8.294693|\n",
+       "|   148|  5909|     7|  8.237921|\n",
+       "|   463|   357|     8| 7.0357056|\n",
+       "|   463|   867|     5| 7.6998167|\n",
+       "|   471|  1290|    10|   8.99254|\n",
+       "|   471|  6153|    10| 7.3729134|\n",
+       "|   496|  3655|     9|  8.711693|\n",
+       "|   833|   915|     5|  6.209361|\n",
+       "|   833|  2056|     5| 5.2611794|\n",
+       "|  1088|  3760|     7| 7.4855328|\n",
        "+------+------+------+----------+\n",
        "only showing top 10 rows"
       ]
@@ -469,7 +469,7 @@
     {
      "data": {
       "text/plain": [
-       "1.7547603254360338"
+       "1.7229040610635111"
       ]
      },
      "execution_count": 23,
@@ -490,7 +490,7 @@
     {
      "data": {
       "text/plain": [
-       "ALSModel: uid=ALS_cfbf51fc1693, rank=50"
+       "ALSModel: uid=ALS_bcf7f2fd9a1e, rank=3"
       ]
      },
      "execution_count": 24,
@@ -516,6 +516,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if os.path.exists(\"alsrecommend.model\"):\n",
+    "    shutil.rmtree(\"alsrecommend.model\")\n",
     "best_model.save(\"alsrecommend.model\")"
    ]
   },
