tune model in standalone python file

--- a/py_files/eda.ipynb
+++ b/py_files/eda.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dask"
+    "# Dask\n"
    ]
   },
   {
@@ -17,7 +17,7 @@
     "import os\n",
     "import dask.dataframe as ddf\n",
     "\n",
-    "from dask.distributed import LocalCluster, Client"
+    "from dask.distributed import LocalCluster, Client\n"
    ]
   },
   {
@@ -38,16 +38,20 @@
    ],
    "source": [
     "cluster = LocalCluster()\n",
-    "client = Client(cluster)"
+    "client = Client(cluster)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_lst = [file.path for file in os.scandir(\"../dossier/\") if file.is_file() and file.path.endswith(\".csv\")]"
+    "file_lst = [\n",
+    "    file.path\n",
+    "    for file in os.scandir(\"../dossier/\")\n",
+    "    if file.is_file() and file.path.endswith(\".csv\")\n",
+    "]"
    ]
   },
   {
@@ -56,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_files(files_list : list, **kwargs) -> ddf:\n",
+    "def read_files(files_list: list, **kwargs) -> ddf:\n",
     "    \"\"\"Read multiple files into a Dask DataFrame\n",
     "\n",
     "    Args:\n",
@@ -75,10 +79,10 @@
    "outputs": [],
    "source": [
     "delayed_obj = read_files(\n",
-    "    files_list=file_lst, \n",
-    "    usecols=[\"isbn\", \"isbn13\", \"title\", \"authors\", \"language\", \"publisher\"], \n",
-    "    dtype={\"isbn\" : \"object\"}\n",
-    "    )"
+    "    files_list=file_lst,\n",
+    "    usecols=[\"isbn\", \"isbn13\", \"title\", \"authors\", \"language\", \"publisher\"],\n",
+    "    dtype={\"isbn\": \"object\"},\n",
+    ")"
    ]
   },
   {
@@ -87,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "books = delayed_obj.compute()"
+    "books = delayed_obj.compute()\n"
    ]
   },
   {
@@ -116,7 +120,7 @@
     }
    ],
    "source": [
-    "books.info()"
+    "books.info()\n"
    ]
   },
   {
@@ -192,7 +196,7 @@
     }
    ],
    "source": [
-    "books.head(2)"
+    "books.head(2)\n"
    ]
   },
   {
@@ -218,7 +222,7 @@
     }
    ],
    "source": [
-    "books.isnull().sum()"
+    "books.isnull().sum()\n"
    ]
   },
   {
@@ -227,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "books = books.dropna(subset=[\"publisher\", \"language\", \"authors\", \"title\"])"
+    "books = books.dropna(subset=[\"publisher\", \"language\", \"authors\", \"title\"])\n"
    ]
   },
   {
@@ -236,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings = ddf.read_csv(\"../archive/Ratings.csv\").compute()"
+    "ratings = ddf.read_csv(\"../archive/Ratings.csv\").compute()\n"
    ]
   },
   {
@@ -262,7 +266,7 @@
     }
    ],
    "source": [
-    "ratings.info()"
+    "ratings.info()\n"
    ]
   },
   {
@@ -271,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings.columns = ratings.columns.str.replace(\"-\",\"_\").str.lower()"
+    "ratings.columns = ratings.columns.str.replace(\"-\", \"_\").str.lower()"
    ]
   },
   {
@@ -334,7 +338,7 @@
     }
    ],
    "source": [
-    "ratings.head(2)"
+    "ratings.head(2)\n"
    ]
   },
   {
@@ -342,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Most Popular items"
+    "### Most Popular items\n"
    ]
   },
   {
@@ -374,7 +378,7 @@
     }
    ],
    "source": [
-    "books[[\"title\"]].value_counts()"
+    "books[[\"title\"]].value_counts()\n"
    ]
   },
   {
@@ -383,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explicit_rating = ratings.query(\"book_rating != 0\")"
+    "explicit_rating = ratings.query(\"book_rating != 0\")\n"
    ]
   },
   {
@@ -391,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Merge into books dataframe"
+    "#### Merge into books dataframe\n"
    ]
   },
   {
@@ -400,7 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings_books = explicit_rating.merge(books, on=[\"isbn\"])"
+    "ratings_books = explicit_rating.merge(books, on=[\"isbn\"])\n"
    ]
   },
   {
@@ -486,7 +490,7 @@
     }
    ],
    "source": [
-    "ratings_books.head(2)"
+    "ratings_books.head(2)\n"
    ]
   },
   {
@@ -494,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get rid of the `ISBN` column, and keep the `ISBN13` column in its stead"
+    "Get rid of the `ISBN` column, and keep the `ISBN13` column in its stead\n"
    ]
   },
   {
@@ -503,7 +507,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings_books = ratings_books.loc[:,[\"user_id\", \"isbn13\", \"title\", \"authors\", \"publisher\", \"language\", \"book_rating\"]]"
+    "ratings_books = ratings_books.loc[\n",
+    "    :, [\"user_id\", \"isbn13\", \"title\", \"authors\", \"publisher\", \"language\", \"book_rating\"]\n",
+    "]"
    ]
   },
   {
@@ -512,7 +518,8 @@
    "metadata": {},
    "source": [
     "### Most liked items\n",
-    "Find the most popular books ranked by their average rating"
+    "\n",
+    "Find the most popular books ranked by their average rating\n"
    ]
   },
   {
@@ -629,7 +636,12 @@
     }
    ],
    "source": [
-    "avg_rating = ratings_books[[\"title\", \"book_rating\"]].groupby([\"title\"]).agg({\"book_rating\": \"mean\"}).sort_values(by=\"book_rating\", ascending=False)\n",
+    "avg_rating = (\n",
+    "    ratings_books[[\"title\", \"book_rating\"]]\n",
+    "    .groupby([\"title\"])\n",
+    "    .agg({\"book_rating\": \"mean\"})\n",
+    "    .sort_values(by=\"book_rating\", ascending=False)\n",
+    ")\n",
     "avg_rating.reset_index()"
    ]
   },
@@ -638,7 +650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Books that are too few in number can end up skewing ratings at both ends."
+    "Books that are too few in number can end up skewing ratings at both ends.\n"
    ]
   },
   {
@@ -658,7 +670,10 @@
     }
    ],
    "source": [
-    "(ratings_books[\"title\"] == \"I Hate the Dallas Cowboys: And Who Elected Them America's Team Anyway?\").sum()"
+    "(\n",
+    "    ratings_books[\"title\"]\n",
+    "    == \"I Hate the Dallas Cowboys: And Who Elected Them America's Team Anyway?\"\n",
+    ").sum()"
    ]
   },
   {
@@ -678,7 +693,10 @@
     }
    ],
    "source": [
-    "(ratings_books[\"title\"] == \"Molly's Surprise: A Christmas Story, Book Three (The American Girls Collection)\").sum()"
+    "(\n",
+    "    ratings_books[\"title\"]\n",
+    "    == \"Molly's Surprise: A Christmas Story, Book Three (The American Girls Collection)\"\n",
+    ").sum()"
    ]
   },
   {
@@ -686,10 +704,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filtering \n",
+    "### Filtering\n",
+    "\n",
     "1. Filter out books with fewer than 10 reviews\n",
     "2. Filter out books with under-represented languages\n",
-    "3. Filter out users with fewer than 5 reviews"
+    "3. Filter out users with fewer than 5 reviews\n"
    ]
   },
   {
@@ -699,7 +718,7 @@
    "outputs": [],
    "source": [
     "freq = ratings_books[\"title\"].value_counts()\n",
-    "frequently_reviewed = freq[freq > 10].index"
+    "frequently_reviewed = freq[freq > 10].index\n"
    ]
   },
   {
@@ -708,7 +727,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "books_df = ratings_books[ratings_books[\"title\"].isin(frequently_reviewed)]"
+    "books_df = ratings_books[ratings_books[\"title\"].isin(frequently_reviewed)]\n"
    ]
   },
   {
@@ -740,7 +759,7 @@
     }
    ],
    "source": [
-    "books_df[[\"title\"]].value_counts()"
+    "books_df[[\"title\"]].value_counts()\n"
    ]
   },
   {
@@ -769,7 +788,7 @@
     }
    ],
    "source": [
-    "books_df[\"language\"].value_counts()"
+    "books_df[\"language\"].value_counts()\n"
    ]
   },
   {
@@ -778,7 +797,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "books_df.loc[books_df[\"language\"] == \"en_US\", \"language\"] = \"en\""
+    "books_df.loc[books_df[\"language\"] == \"en_US\", \"language\"] = \"en\"\n"
    ]
   },
   {
@@ -806,7 +825,7 @@
     }
    ],
    "source": [
-    "books_df[\"language\"].value_counts()"
+    "books_df[\"language\"].value_counts()\n"
    ]
   },
   {
@@ -815,7 +834,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "minor_langs = books_df.loc[(books_df[\"language\"] == \"ru\") | (books_df[\"language\"] == \"hi\")].index"
+    "minor_langs = books_df.loc[\n",
+    "    (books_df[\"language\"] == \"ru\") | (books_df[\"language\"] == \"hi\")\n",
+    "].index"
    ]
   },
   {
@@ -824,7 +845,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "books_df = books_df.drop(minor_langs, axis=0)"
+    "books_df = books_df.drop(minor_langs, axis=0)\n"
    ]
   },
   {
@@ -850,7 +871,7 @@
     }
    ],
    "source": [
-    "books_df[\"language\"].value_counts()"
+    "books_df[\"language\"].value_counts()\n"
    ]
   },
   {
@@ -860,7 +881,7 @@
    "outputs": [],
    "source": [
     "usr_freq = books_df[\"user_id\"].value_counts()\n",
-    "freq_raters = usr_freq[usr_freq > 5].index"
+    "freq_raters = usr_freq[usr_freq > 5].index\n"
    ]
   },
   {
@@ -869,7 +890,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "books_df = books_df[books_df[\"user_id\"].isin(freq_raters)]"
+    "books_df = books_df[books_df[\"user_id\"].isin(freq_raters)]\n"
    ]
   },
   {
@@ -877,7 +898,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Average rating of remaining books"
+    "#### Average rating of remaining books\n"
    ]
   },
   {
@@ -994,7 +1015,12 @@
     }
    ],
    "source": [
-    "avg_remain = books_df[[\"title\", \"book_rating\"]].groupby([\"title\"]).agg({\"book_rating\": \"mean\"}).sort_values(by=\"book_rating\", ascending=False)\n",
+    "avg_remain = (\n",
+    "    books_df[[\"title\", \"book_rating\"]]\n",
+    "    .groupby([\"title\"])\n",
+    "    .agg({\"book_rating\": \"mean\"})\n",
+    "    .sort_values(by=\"book_rating\", ascending=False)\n",
+    ")\n",
     "avg_remain.reset_index()"
    ]
   },
@@ -1003,7 +1029,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### V"
+    "#### V\n"
    ]
   },
   {
@@ -1120,7 +1146,9 @@
     }
    ],
    "source": [
-    "grouped = books_df.groupby(\"title\")[[\"book_rating\"]].agg({\"book_rating\" : [(\"num_ratings\", \"count\")]})\n",
+    "grouped = books_df.groupby(\"title\")[[\"book_rating\"]].agg(\n",
+    "    {\"book_rating\": [(\"num_ratings\", \"count\")]}\n",
+    ")\n",
     "grouped.columns = grouped.columns.droplevel()\n",
     "grouped = grouped.reset_index().sort_values(by=\"num_ratings\", ascending=False)\n",
     "grouped"
@@ -1131,7 +1159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Non-Personalized Recommendations"
+    "### Non-Personalized Recommendations\n"
    ]
   },
   {
@@ -1141,7 +1169,7 @@
    "outputs": [],
    "source": [
     "from itertools import permutations\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -1157,7 +1185,7 @@
     "        col (_type_): column\n",
     "\n",
     "    Returns:\n",
-    "        ddf: pandas dataframe \n",
+    "        ddf: pandas dataframe\n",
     "    \"\"\"\n",
     "    pairs = pd.DataFrame(list(permutations(col, 2)), columns=[\"book_a\", \"book_b\"])\n",
     "    return pairs"
@@ -1169,7 +1197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "book_pairs = books_df.groupby(\"user_id\")[\"title\"].apply(create_pairs)"
+    "book_pairs = books_df.groupby(\"user_id\")[\"title\"].apply(create_pairs)\n"
    ]
   },
   {
@@ -1248,7 +1276,7 @@
    ],
    "source": [
     "book_pairs = book_pairs.reset_index(drop=True)\n",
-    "book_pairs.head()"
+    "book_pairs.head()\n"
    ]
   },
   {
@@ -1257,7 +1285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pair_counts = book_pairs.groupby([\"book_a\", \"book_b\"]).size()"
+    "pair_counts = book_pairs.groupby([\"book_a\", \"book_b\"]).size()\n"
    ]
   },
   {
@@ -1266,7 +1294,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pair_counts_df = pair_counts.to_frame(name=\"size\").reset_index().sort_values(by=\"size\", ascending=False)"
+    "pair_counts_df = (\n",
+    "    pair_counts.to_frame(name=\"size\")\n",
+    "    .reset_index()\n",
+    "    .sort_values(by=\"size\", ascending=False)\n",
+    ")"
    ]
   },
   {
@@ -1275,7 +1307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_pairs = pair_counts_df[pair_counts_df[\"book_a\"] != pair_counts_df[\"book_b\"]]"
+    "true_pairs = pair_counts_df[pair_counts_df[\"book_a\"] != pair_counts_df[\"book_b\"]]\n"
    ]
   },
   {
@@ -1366,7 +1398,7 @@
     }
    ],
    "source": [
-    "true_pairs.head()"
+    "true_pairs.head()\n"
    ]
   },
   {
@@ -1497,7 +1529,9 @@
     }
    ],
    "source": [
-    "harry_potter = true_pairs[true_pairs[\"book_a\"] == \"Harry Potter And The Goblet Of Fire\"].nlargest(10, \"size\")\n",
+    "harry_potter = true_pairs[\n",
+    "    true_pairs[\"book_a\"] == \"Harry Potter And The Goblet Of Fire\"\n",
+    "].nlargest(10, \"size\")\n",
     "harry_potter"
    ]
   },
@@ -1506,7 +1540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Serialize columns"
+    "### Serialize columns\n"
    ]
   },
   {
@@ -1516,7 +1550,7 @@
    "outputs": [],
    "source": [
     "books_df.user_id = pd.Categorical(books_df.user_id)\n",
-    "books_df[\"userId\"] = books_df.user_id.cat.codes"
+    "books_df[\"userId\"] = books_df.user_id.cat.codes\n"
    ]
   },
   {
@@ -1526,7 +1560,7 @@
    "outputs": [],
    "source": [
     "books_df.isbn13 = pd.Categorical(books_df.isbn13)\n",
-    "books_df[\"bookId\"] = books_df.isbn13.cat.codes"
+    "books_df[\"bookId\"] = books_df.isbn13.cat.codes\n"
    ]
   },
   {
@@ -1535,7 +1569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "books_df = books_df.rename(columns={\"book_rating\" :\"rating\"})"
+    "books_df = books_df.rename(columns={\"book_rating\": \"rating\"})"
    ]
   },
   {
@@ -1762,7 +1796,7 @@
     }
    ],
    "source": [
-    "books_df"
+    "books_df\n"
    ]
   },
   {
@@ -1771,7 +1805,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df = books_df.loc[:, [\"userId\", \"bookId\", \"title\", \"language\", \"rating\"]]"
+    "clean_df = books_df.loc[:, [\"userId\", \"bookId\", \"title\", \"language\", \"rating\"]]\n"
    ]
   },
   {
@@ -1779,7 +1813,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save to Parquet"
+    "### Save to Parquet\n"
    ]
   },
   {
@@ -1788,7 +1822,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df.to_parquet(\"work_df.parquet\", index=False)"
+    "clean_df.to_parquet(\"work_df.parquet\", index=False)\n"
    ]
   },
   {
@@ -1797,7 +1831,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.close()"
+    "client.close()\n"
    ]
   }
  ],
@@ -1817,7 +1851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
