--- a/py_files/sparkml.ipynb
+++ b/py_files/sparkml.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
-    "from pyspark.sql.types import IntegerType, StringType"
+    "from pyspark.sql.types import IntegerType, StringType\n"
    ]
   },
   {
@@ -38,12 +38,13 @@
     }
    ],
    "source": [
-    "spark = SparkSession.builder \\\n",
-    "        .appName(\"Book Recommender\") \\\n",
-    "        .config(\"spark.sql.repl.eagerEval.enabled\", True) \\\n",
-    "        .config(\"spark.sql.repl.eagerEval.maxNumRows\", 10) \\\n",
-    "        .config(\"spark.driver.memory\", \"4g\") \\\n",
-    "        .getOrCreate()"
+    "spark = (\n",
+    "    SparkSession.builder.appName(\"Book Recommender\")\n",
+    "    .config(\"spark.sql.repl.eagerEval.enabled\", True)\n",
+    "    .config(\"spark.sql.repl.eagerEval.maxNumRows\", 10)\n",
+    "    .config(\"spark.driver.memory\", \"4g\")\n",
+    "    .getOrCreate()\n",
+    ")"
    ]
   },
   {
@@ -52,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark_df = spark.read.parquet(\"work_df.parquet\")"
+    "spark_df = spark.read.parquet(\"work_df.parquet\")\n"
    ]
   },
   {
@@ -75,7 +76,7 @@
     }
    ],
    "source": [
-    "spark_df.printSchema()"
+    "spark_df.printSchema()\n"
    ]
   },
   {
@@ -84,10 +85,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark_df = spark_df.withColumns({\n",
-    "    \"userId\": F.col(\"userId\").cast(IntegerType()), \n",
-    "    \"bookId\" : F.col(\"bookId\").cast(IntegerType()), \n",
-    "    \"rating\" : F.col(\"rating\").cast(IntegerType())\n",
+    "spark_df = spark_df.withColumns(\n",
+    "    {\n",
+    "        \"userId\": F.col(\"userId\").cast(IntegerType()),\n",
+    "        \"bookId\": F.col(\"bookId\").cast(IntegerType()),\n",
+    "        \"rating\": F.col(\"rating\").cast(IntegerType()),\n",
     "    }\n",
     ")"
    ]
@@ -112,7 +114,7 @@
     }
    ],
    "source": [
-    "spark_df.printSchema()"
+    "spark_df.printSchema()\n"
    ]
   },
   {
@@ -163,7 +165,7 @@
    ],
    "source": [
     "book_ratings = spark_df.select(\"userId\", \"bookId\", \"rating\")\n",
-    "book_ratings"
+    "book_ratings\n"
    ]
   },
   {
@@ -182,7 +184,7 @@
    "source": [
     "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator\n",
     "from pyspark.ml.recommendation import ALS, ALSModel\n",
-    "from pyspark.ml.evaluation import RegressionEvaluator"
+    "from pyspark.ml.evaluation import RegressionEvaluator\n"
    ]
   },
   {
@@ -199,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(train, test) = book_ratings.randomSplit([0.8, 0.2], seed=42)"
+    "(train, test) = book_ratings.randomSplit([0.8, 0.2], seed=42)\n"
    ]
   },
   {
@@ -222,7 +224,7 @@
     "    ratingCol=\"rating\",\n",
     "    nonnegative=True,\n",
     "    coldStartStrategy=\"drop\",\n",
-    "    seed=42\n",
+    "    seed=42,\n",
     ")"
    ]
   },
@@ -232,7 +234,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluator = RegressionEvaluator(metricName=\"rmse\", labelCol=\"rating\", predictionCol=\"prediction\")"
+    "evaluator = RegressionEvaluator(\n",
+    "    metricName=\"rmse\", labelCol=\"rating\", predictionCol=\"prediction\"\n",
+    ")"
    ]
   },
   {
@@ -249,7 +253,7 @@
     }
    ],
    "source": [
-    "simple_model = als.fit(train)"
+    "simple_model = als.fit(train)\n"
    ]
   },
   {
@@ -258,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = simple_model.transform(test)"
+    "predictions = simple_model.transform(test)\n"
    ]
   },
   {
@@ -308,7 +312,7 @@
     }
    ],
    "source": [
-    "predictions"
+    "predictions\n"
    ]
   },
   {
@@ -329,7 +333,7 @@
    ],
    "source": [
     "rmse = evaluator.evaluate(predictions)\n",
-    "rmse"
+    "rmse\n"
    ]
   },
   {
@@ -338,11 +342,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_grid = ParamGridBuilder() \\\n",
-    "            .addGrid(als.maxIter, [5,10]) \\\n",
-    "            .addGrid(als.rank, [3,5,10]) \\\n",
-    "            .addGrid(als.regParam, [0.1, 0.5]) \\\n",
-    "            .build()"
+    "param_grid = (\n",
+    "    ParamGridBuilder()\n",
+    "    .addGrid(als.maxIter, [5, 10])\n",
+    "    .addGrid(als.rank, [3, 5, 10])\n",
+    "    .addGrid(als.regParam, [0.1, 0.5])\n",
+    "    .build()\n",
+    ")"
    ]
   },
   {
@@ -359,7 +365,7 @@
     }
    ],
    "source": [
-    "print(f\"Num. Models: {len(param_grid)}\")"
+    "print(f\"Num. Models: {len(param_grid)}\")\n"
    ]
   },
   {
@@ -372,7 +378,8 @@
     "    estimator=als,\n",
     "    estimatorParamMaps=param_grid,\n",
     "    evaluator=evaluator,\n",
-    "    parallelism=4, numFolds=3\n",
+    "    parallelism=4,\n",
+    "    numFolds=3,\n",
     ")"
    ]
   },
@@ -390,7 +397,7 @@
     }
    ],
    "source": [
-    "tuned_model = cv.fit(train)"
+    "tuned_model = cv.fit(train)\n"
    ]
   },
   {
@@ -399,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model = tuned_model.bestModel"
+    "best_model = tuned_model.bestModel\n"
    ]
   },
   {
@@ -408,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions_2 = best_model.transform(test)"
+    "predictions_2 = best_model.transform(test)\n"
    ]
   },
   {
@@ -458,7 +465,7 @@
     }
    ],
    "source": [
-    "predictions_2"
+    "predictions_2\n"
    ]
   },
   {
@@ -479,7 +486,7 @@
    ],
    "source": [
     "rmse_2 = evaluator.evaluate(predictions_2)\n",
-    "rmse_2"
+    "rmse_2\n"
    ]
   },
   {
@@ -499,7 +506,7 @@
     }
    ],
    "source": [
-    "best_model"
+    "best_model\n"
    ]
   },
   {
@@ -507,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save the model"
+    "## Save the model\n"
    ]
   },
   {
@@ -518,7 +525,7 @@
    "source": [
     "if os.path.exists(\"alsrecommend.model\"):\n",
     "    shutil.rmtree(\"alsrecommend.model\")\n",
-    "best_model.save(\"alsrecommend.model\")"
+    "best_model.save(\"alsrecommend.model\")\n"
    ]
   },
   {
@@ -527,7 +534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.stop()"
+    "spark.stop()\n"
    ]
   }
  ],
@@ -547,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
